--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,22 +27,26 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^4.8.1
-  cupertino_icons: ^1.0.2
-  firebase_auth: ^4.6.3
-  firebase_core: ^2.14.0
-  firebase_storage: ^11.2.3
+  cloud_firestore: ^5.1.0
+  cupertino_icons: ^1.0.8
+  firebase_auth: ^5.1.2
+  firebase_core: ^3.2.0
+  firebase_storage: ^12.1.1
+  get: ^4.6.6
+  timeago: ^3.6.1
+  video_compress: ^3.1.2
+  video_player: ^2.9.0
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view: ^0.6.2
-  flutter_svg: ^2.0.7
-  image_picker: ^0.8.4+4
-  intl: ^0.18.1
-  provider: ^6.0.1
-  uuid: ^3.0.5
+  flutter_staggered_grid_view: ^0.7.0
+  image_picker: ^1.1.2
+  flutter_svg: ^2.0.10+1
+  intl: ^0.19.0
+  provider: ^6.1.2
+  uuid: ^4.4.2
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
